--- a/Ats.vcxproj.filters
+++ b/Ats.vcxproj.filters
@@ -78,5 +78,8 @@
     <ClInclude Include="Tims.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AtsPs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
