--- a/Ats.vcxproj
+++ b/Ats.vcxproj
@@ -23,6 +23,7 @@
     <ProjectGuid>{E3FF2490-DD6B-4985-8ECB-2E57BB31B19B}</ProjectGuid>
     <RootNamespace>Ats</RootNamespace>
     <ProjectName>NewSnp2</ProjectName>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -69,8 +70,8 @@
     <_ProjectFileVersion>17.0.35219.272</_ProjectFileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>Debug\</OutDir>
-    <IntDir>Debug\</IntDir>
+    <OutDir>Debug\x86</OutDir>
+    <IntDir>Debug\x86</IntDir>
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -193,7 +194,6 @@
     <ClInclude Include="Ats.h" />
     <ClInclude Include="AtsP.h" />
     <ClInclude Include="atsplugin.h" />
-    <ClInclude Include="AtsPs.h" />
     <ClInclude Include="AtsPs.hpp" />
     <ClInclude Include="AtsSn.h" />
     <ClInclude Include="DAtc.hpp" />
